--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,10 @@
   --chart-3: 197 37% 24%;
   --chart-4: 43 74% 66%;
   --chart-5: 27 87% 67%;
+  --color-red-600: #e7000b;
+  --color-red-500: #CF0101;
+  --color-orange-600: #e17100;
+  --color-green-500: #00c950;
 }
 
 .dark {
